[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "Termage"
authors = [ { name = "Balázs Cene", email= "bczsalba@gmail.com" } ]
description = """Generate SVGs from any Python code, even in your documentation."""

license = {text = "MIT"}

requires-python = ">=3.8"
dependencies = ["pytermgui"]

keywords = [
    "terminal",
    "documentation",
    "mkdocs",
    "mkdocs-plugin",
    "mkdocs-material",
    "PyTermGUI",
    "svg-images",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Topic :: Terminals",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
]

dynamic = ["readme", "version"]

[project.urls]
homepage = "https://github.com/bczsalba/Termage"
repository = "https://github.com/bczsalba/Termage"
documentation = "https://termage.bczsalba.com"

[project.scripts]
termage = "pytermgui.__main__:main"

[project.entry-points."mkdocs.plugins"]
markdown-exec = "termage.mkdocs_plugin:TermagePlugin"

[tool.hatch.version]
path = "termage/__init__.py"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
end-before = "\n<!-- HATCH README END -->"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text = """

## Latest release

#"""

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "CHANGELOG.md"
end-before = "\n<!-- HATCH README END -->"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text = "\n\nRead the full changelog [here](https://github.com/bczsalba/Termage/blob/master/CHANGELOG.md).\n\n"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "CHANGELOG.md"
start-after = "\n<!-- HATCH URI DEFINITIONS START -->"

[tool.mypy]
show_error_codes = true

[tool.pylint.messages_control]
disable = [
    "fixme",
    # If this is a problem, it should occur during runtime
    "not-callable"
]

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "x" ,"y", "fd"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __fancy_repr__",
    "def __repr__",
]

omit = [
    "pytermgui/cmd.py"
]

[tool.isort]
profile = "black"
